[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["pi314ever <pilotflyer824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
advent-of-code-data = "^2.0.1"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
pygraphviz = "^1.11"
scipy = "^1.11.4"
tqdm = "^4.66.1"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
